# Obstacle_Avoidance

gazebo_mecanum_plugins/: CMakeLists.txt  package.xml
gazebo_mecanum_plugins/include/gazebo_mecanum_plugins/: gazebo_mecanum_drive_private.h
gazebo_mecanum_plugins/src/: gazebo_mecanum_drive.cpp  gazebo_mecanum_plugin.xml
obstacle_avoidance/: CMakeLists.txt  package.xml
obstacle_avoidance/launch/: GD8_display_launch.py
obstacle_avoidance/rviz/: GD8.rviz
obstacle_avoidance/scripts/: control.py  serial.py
obstacle_avoidance/scripts/DDPG/: agent.py  ddpg.py  ddpg_robot.py  lidar.py
obstacle_avoidance/scripts/DQN/: agent.py  dqn.py  dqn_robot.py  lidar.py  test.py
obstacle_avoidance/scripts/QLearning/: QLearning.py  control.py  control_node.py  feedback_control_node.py  learning_node.py  lidar.py  scan_node.py
obstacle_avoidance/scripts/SARSA/: lidar.py  sarsa.py  sarsa_robot.py  topic.py
obstacle_avoidance/urdf/urdf/: Robot.gazebo  Robot.trans  Robot.xacro
obstacle_avoidance/urdf/urdf/meshes/: BL_R1_1.stl  BL_R2_1.stl  BL_R3_1.stl  BL_R4_1.stl  BL_R5_1.stl  BL_R6_1.stl  BL_R7_1.stl  BL_R8_1.stl  BL_R9_1.stl  BR_R1_1.stl  BR_R2_1.stl  BR_R3_1.stl  BR_R4_1.stl  BR_R5_1.stl  BR_R6_1.stl  BR_R7_1.stl  BR_R8_1.stl  BR_R9_1.stl  IMU_1.stl  Lidar_1.stl  TL_R1_1.stl  TL_R2_1.stl  TL_R3_1.stl  TL_R4_1.stl  TL_R5_1.stl  TL_R6_1.stl  TL_R7_1.stl  TL_R8_1.stl  TL_R9_1.stl  TR_R1_1.stl  TR_R2_1.stl  TR_R3_1.stl  TR_R4_1.stl  TR_R5_1.stl  TR_R6_1.stl  TR_R7_1.stl  TR_R8_1.stl  TR_R9_1.stl  Wheel_BL_1.stl  Wheel_BR_1.stl  (+3 more)
obstacle_avoidance/world/: Box  QLearn.blend  QLearn.sdf  QLearn.stl  Room with objects.stl  Room_with_obstacles  box.stl  my_world.sdf  room1.world
obstacle_avoidance/world/QLearn/: model.config  model.sdf
